--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title><h1>Git Dersleri</h1></title>
 </head>
 <body>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi ipsum accusantium, qui reprehenderit animi porro sed minus iste modi quasi quibusdam totam nulla. Nobis, perferendis? Ipsa tempore voluptas impedit nisi illo fugiat, ex, natus architecto sequi accusamus, nulla nihil quos a mollitia. Iste, at! Repellendus, at in molestiae, velit nesciunt asperiores laborum a placeat assumenda incidunt sint minus corporis magni exercitationem animi dicta aliquam illum odit voluptatum, labore enim? Laborum pariatur, porro dicta amet aliquid iste obcaecati, qui nobis nisi fugit odio hic quo excepturi sapiente placeat cum accusantium? Qui quae consequuntur optio. Sequi excepturi, quod accusantium deserunt totam dolores.</p>
 </body>
 </html>
