--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title><h1>Git Dersleri</h1></title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, debitis.</p>
 </body>
 </html>
